--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-194.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇺🇸 美国-1.97MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: AFU5HtqSajyI}
-  - {name: 🇺🇸 美国-2.66MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇯🇵 日本-1.41MB/s(Youtube:不良林), server: jp.v2yyds.cc, port: 35213, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: jp.v2yyds.cc, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.16MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-477.4KB/s(Youtube:不良林), server: xmrh021.xmrth-node.xyz, port: 15886, type: vmess, uuid: 16b00fc9-a284-3063-90c9-de55a2b5cb61, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh021.xmrth-node.xyz}}
-  - {name: 🇨🇳 中国-426.9KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇦🇺 澳大利亚-357.9KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇦 加拿大-978.6KB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: 38.75.136.161, port: 9090, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 (已存活1天)中国-1.93MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇳 中国-377.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65024, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇦 加拿大-2.22MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: cc4.qweasdzxc.gq, port: 45747, type: ss, cipher: chacha20-ietf-poly1305, password: 6ThhE43itV3}
-  - {name: 🇸🇬 新加坡-2.17MB/s(Youtube:不良林), server: sg.v2yyds.cc, port: 35213, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: sg.v2yyds.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-478.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-344.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-314.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-920.2KB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8020, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-194.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇭🇰 香港-477.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-357.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-978.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-920.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-194.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇭🇰 香港-477.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-357.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-978.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-920.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-194.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇭🇰 香港-477.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-357.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-978.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-920.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-477.4KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-194.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇭🇰 香港-477.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-357.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-978.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-920.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-194.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇭🇰 香港-477.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-357.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-978.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-920.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-194.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇭🇰 香港-477.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-357.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-978.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-920.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-194.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇭🇰 香港-477.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-357.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-978.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-920.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
