--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
+  - {name: 🇨🇳 中国-174.8KB/s(Youtube:不良林), server: 120.233.151.171, port: 8070, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇭🇰 香港-2.46MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
   - {name: 🇨🇳 中国-2.32MB/s(Youtube:不良林), server: 120.233.151.171, port: 8020, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
-  - {name: 🇸🇬 新加坡-499.2KB/s(Youtube:不良林), server: sg.v2yyds.cc, port: 35214, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: sg.v2yyds.cc, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.76MB/s(Youtube:不良林), server: sg-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-01.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-166.2KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-373.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-558.1KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-305.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-403.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-349.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活4天)香港-1.91MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-443.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇸🇬 新加坡-392.0KB/s(Youtube:不良林), server: sg1.xz88.ml, port: 12464, type: vmess, uuid: 09a62e54-0f74-4002-8d45-5fe63e4bf2a2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 未知国家-2.17MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 未知国家-3.38MB/s(Youtube:不良林), server: lu1.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3908b44d1be0a4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: lu1.gogogoo.cyou}}
+  - {name: 🇺🇸 美国-1.61MB/s(Youtube:不良林), server: lu1.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: lu1.gogogoo.cyou}}
+  - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-499.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-558.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-403.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
+      - 未知国家-2.17MB/s(Youtube:不良林)
+      - 未知国家-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-499.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-558.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-403.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
+      - 未知国家-2.17MB/s(Youtube:不良林)
+      - 未知国家-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-499.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-558.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-403.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
+      - 未知国家-2.17MB/s(Youtube:不良林)
+      - 未知国家-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.46MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-1.91MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-499.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-558.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-403.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
+      - 未知国家-2.17MB/s(Youtube:不良林)
+      - 未知国家-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-499.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-558.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-403.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
+      - 未知国家-2.17MB/s(Youtube:不良林)
+      - 未知国家-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-499.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-558.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-403.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
+      - 未知国家-2.17MB/s(Youtube:不良林)
+      - 未知国家-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-499.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-373.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-558.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-305.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-403.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
+      - 未知国家-2.17MB/s(Youtube:不良林)
+      - 未知国家-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
